prepare for module system

--- a/parquet-io/pom.xml
+++ b/parquet-io/pom.xml
@@ -159,6 +159,13 @@
 				<configuration>
 					<source>${java.version}</source>
 					<target>${java.version}</target>
+					<annotationProcessorPaths>
+						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+							<version>1.18.20</version>
+						</path>
+					</annotationProcessorPaths> 
 				</configuration>
 			</plugin>
 			<plugin>
